objects/Flosum__Component_History__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Component__c</fullName>
        <label>Component</label>
        <referenceTo>Flosum__Component__c</referenceTo>
        <relationshipLabel>Component History</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flosum__Version_Name__c</fullName>
        <formula>HYPERLINK(&apos;javascript:window.open(\&quot;apex/&apos;+ $Setup.Flosum__Credentials__c.Flosum__Namespace__c+&apos;viewmetadata?id=&apos;+ Id +&apos;\&quot;, \&quot;_blank\&quot;,\&quot;menubar=0,top=0px\&quot;);&apos;,  TEXT(Flosum__Version__c) , &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Component History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Component History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>